--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,10 @@
 * {
   font-family: "Poppins", sans-serif;
 }
+
+@theme {
+  --color-primary: #2563eb;
+  --color-primary-dull: #1f58d8;
+  --color-light: #f1f5f9;
+  --color-borderColor: #c4c7d2;
+}
